--- a/src/makes/makes.component.css
+++ b/src/makes/makes.component.css
@@ -64,17 +64,28 @@ table tr th{
   padding: 10px;
   font-size: 20px;
 }
+table tr th span{
+  margin-left: 5px;
+}
 
-table td {
+table td{
   border: 1px solid black;
   padding: 10px;
+  width: 50%;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
 }
 
 table tr:not(:first-child):hover {
   background-color: #ccc;
 }
 
-
 .hidden{
   display: none;
+}
+
+.table_head th{
+  border: 1px solid black;
+  width: 50%;
 }
