--- a/src/app/makes/makes.component.css
+++ b/src/app/makes/makes.component.css
@@ -38,19 +38,23 @@
   background-color: #14AD55;
 }
 
+.page_sizes_dropdown{
+  height: 56px;
+  padding-left: 12px;
+  padding-right: 12px;
+}
 
 .search {
   border: 1px solid black;
   padding-left: 10px;
   padding-right: 10px;
-  padding-bottom: 8px;
-  padding-top: 8px;
   float: right;
   margin-bottom: 28px;
 }
 
 .search input {
   padding: 0;
+  height: 56px;
   border: 0px solid transparent;
   /* Remove default blue outline */
   outline: none;
